--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,69 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Operating System Files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+Thumbs.db
 
+# IDE/Editor Files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Dependency Directories
+node_modules/
+vendor/
+bower_components/
+
+# Build Files
+/dist/
+/build/
+*.exe
+*.dll
+*.so
+*.a
+
+# Log Files
+*.log
+npm-debug.log*
+
+# Environment Files
+.env
+.env.local
+.env.development
+.env.production
+
+# Temporary Files
+*.tmp
+*.temp
+
+# Compiled Source
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Local Development Files
+*.local
+*.bak
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
+
+# Environment variables
+.env
+.env.test
+.env.production
